--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,30 @@
     <string name="action_settings">Settings</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
+
+
+    <!-- Nav Drawer Menu Items -->
+    <string-array name="nav_drawer_items">
+        <item >Ntv Spor</item>
+        <item >Sporx</item>
+        <item >Lig TV</item>
+        <item >Communities</item>
+        <item >Pages</item>
+        <item >What Hot</item>
+    </string-array>
+
+    <!-- Nav Drawer List Item Icons -->
+    <!-- Keep them in order as the titles are in -->
+    <array name="nav_drawer_icons">
+        <item>@drawable/ntvspor</item>
+        <item>@drawable/sporx</item>
+        <item>@drawable/ligtv</item>
+        <item>@drawable/ligtv</item>
+        <item>@drawable/ligtv</item>
+        <item>@drawable/ligtv</item>
+    </array>
+
+    <!-- Content Description -->
+    <string name="desc_list_item_icon">Item Icon</string>
+
 </resources>
