--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,22 +20,22 @@
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
         <item >Ntv Spor</item>
-        <item >Fotomaç</item>
-        <item >Lig TV</item>
-        <item >HaberTürk</item>
-        <item >Sabah</item>
         <item >A-Spor</item>
+        <item >Sabah-Spor</item>
+        <item >Lig TV</item>
+        <item >HT Spor</item>
+        <item >Fotomaç</item>
     </string-array>
 
     <!-- Nav Drawer List Item Icons -->
     <!-- Keep them in order as the titles are in -->
     <array name="nav_drawer_icons">
         <item>@mipmap/ntvspor</item>
-        <item>@mipmap/fotomac</item>
+        <item>@mipmap/aspor</item>
+        <item>@mipmap/sabah</item>
         <item>@mipmap/ligtv</item>
         <item>@mipmap/haberturk</item>
-        <item>@mipmap/sabah</item>
-        <item>@mipmap/aspor</item>
+        <item>@mipmap/fotomac</item>
     </array>
 
     <!-- Content Description -->
