--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="ntvspor_feed">http://www.ntvspor.net/Rss/anasayfa</string>
     <string name="sporx_feed">http://www.sporx.com/_xml/rss.php</string>
     <string name="ligtv_feed">http://www.ligtv.com.tr/rss/ana-sayfa</string>
-    <string name="fotomac_feed">http://www.fotomac.com.tr/rss/WebTv.xml</string>
+    <string name="fotomac_feed">http://www.fotomac.com.tr/rss/Anasayfa.xml</string>
     <string name="haberturk_feed">http://www.haberturk.com/rss/spor.xml</string>
     <string name="sabah_feed">http://www.sabah.com.tr/rss/spor.xml</string>
     <string name="aspor_feed">http://www.aspor.com.tr/rss/WebTV.xml</string>
