--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="aspor_feed">http://www.aspor.com.tr/rss/WebTV.xml</string>
     <string name="trtspor_feed">http://www.aspor.com.tr/rss/WebTV.xml</string>
     <string name="puan_durumu_url">http://www.ligtv.com.tr/lig/spor-toto-super-lig/puan-durumu</string>
+    <string name="fikstur_url">http://spor.haberler.com/superlig/puan-durumu/</string>
 
 
 
