Swipe Refresh feature added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Sportmix</string>
+    <string name="app_name">Spormix</string>
 
     <string name="loading">Yükleniyor lütfen bekleyiniz</string>
     <string name="action_settings">Settings</string>
