--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,16 @@
     <string name="spor_haber3_feed">http://spor.haber3.com/rss/</string>
 
 
+    <string name="test_admob_unit_id">ca-app-pub-3940256099942544/3986624511</string>
+  <!--  <string name="test_admob_unit_id">ca-app-pub-5024459224391382/7640716957</string>-->
 
+    <string name="avarracot_api_key">dde87534e5c4c37d5b142acd679b09764cc66a42</string>
+    <string name="avarracot_ad_id">cd9588d52662ef92a9a43c1a6e5ea84a5b2b3a6c</string>
+
+    <string name="avarracot_feed_id">f64068d10bdfdaa1a75fe9ada189a51b7ef7830c</string>
+
+
+    <string name="test_device_id">1A5E79B575AD9E78DDDA6F374C386462</string>
 
     <!-- Nav Drawer Menu Items -->
     <string-array name="nav_drawer_items">
@@ -52,5 +61,9 @@
 
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
+    <string name="exit_talk">Uygulamadan Çıkıyorsunuz...</string>
+    <string name="are_you_sure">Uygulamadan çıkmak istediğinize emin misiniz ?</string>
+    <string name="yes">Evet</string>
+    <string name="no">Hayır</string>
 
 </resources>
